squid/4deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: squid
  namespace: apps
  labels:
    name: squid
spec:
  replicas: 1
  serviceName: squid
  selector:
    matchLabels:
      app: squid
  template:
    metadata:
      labels:
        app: squid
    spec:
      containers:
        - name: squid
          image: docker.io/b4tman/squid:armhf
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: conf
              mountPath: /etc/squid/squid.conf
              subPath: squid.conf
            - name: blacklist-ads
              mountPath: /etc/squid/blacklist_ads.txt
              subPath: blacklist_ads.txt
            - name: blacklist-sites
              mountPath: /etc/squid/blacklist_sites.txt
              subPath: blacklist_sites
            - name: logs-data-pvc
              mountPath: /var/log/squid
              mountPath: /var/spool/squid
              #- name: user-passwords
              #mountPath: /etc/squid/passwd
          ports:
            - containerPort: 3128
              hostPort: 3128
              protocol: TCP
      volumes:
        - name: conf
          configMap:
            name: squid-config
        - name: blacklist-ads
          configMap:
            name: squid-config
        - name: blacklist-sites
          configMap:
            name: squid-config
        - name: logs
          persistentVolumeClaim:
            claimName: squid-pvc
        - name: logs-data-pvc
          persistentVolumeClaim:
            claimName: squid-pvc
            #- name: user-passwords
            #secret:
            #secretName: squid-shpaq-secret
