squid/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: squid
  labels:
    name: squid
  namespace: apps
spec:
  externalIPs:
    - 10.0.0.13
  ports:
    - port: 3128
      targetPort: 3128
      protocol: TCP
  selector:
    app: squid
