squid/5service.yaml
apiVersion: v1
kind: Service
metadata:
  name: squid
  labels:
    name: squid
  namespace: proxy
spec:
  type: LoadBalancer
  ports:
    - port: 3128
      targetPort: 3128
      protocol: TCP
  selector:
    app: squid
